--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export",
-    "deploy": "npm run build && gh-pages -d out",
-    "predeploy": "npm run build"
+    "lint": "next lint",
+    "clean:out": "powershell -NoProfile -Command \"If (Test-Path ./out) { Remove-Item -Recurse -Force ./out }\" || exit 0",
+    "build:gh-pages": "npm run clean:out && set NEXT_EXPORT=1&& set BASE_PATH=/RALAN_web&& next build",
+    "serve:gh-pages": "node scripts/serve-ghpages.cjs",
+    "predeploy": "npm run build:gh-pages",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@next/font": "^14.2.15",
@@ -25,6 +28,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "express": "^4.19.2",
     "gh-pages": "^6.3.0",
     "typescript": "^5"
   }
