--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "gsap": "^3.13.0",
     "next": "15.5.3",
     "react": "19.1.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/body-scroll-lock": "^3.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
