build for tailwind

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "clean:out": "powershell -NoProfile -Command \"If (Test-Path ./out) { Remove-Item -Recurse -Force ./out }\" || exit 0",
     "build:gh-pages": "npm run clean:out && set NEXT_EXPORT=1&& set BASE_PATH=/RALAN_web&& next build",
+    "build:timeweb": "npm run clean:out && set NEXT_EXPORT=1&& next build",
     "serve:gh-pages": "node scripts/serve-ghpages.cjs",
     "add:nojekyll": "powershell -NoProfile -Command \"New-Item -Path ./out/.nojekyll -ItemType File -Force | Out-Null\"",
     "predeploy": "npm run build:gh-pages && npm run add:nojekyll",
