--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "@reduxjs/toolkit": "^2.11.2",
     "body-scroll-lock": "^4.0.0-beta.0",
     "gsap": "^3.13.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-redux": "^9.2.0",
     "sass": "^1.93.0",
     "swiper": "^12.0.2"
   },
